--- a/style1.css
+++ b/style1.css
@@ -4,31 +4,30 @@
 /* small icon next to buttons */
 
 #menu-container{
-	position: fixed;
-	width: 10em;
-	height: 100%;
-	transform: translate(-10.1em);
+	width: 100%;
+	height: 5em;
 }
 
 #menu-logo{
-	width: 100%;
-	height: auto;
+	width: calc(5em - 2px);
+	height: 5em;
+	float:left;
 }
 
 .menu-item{
 	list-style-type: none;
-	height: 5em;
-	width: 100%;
+	height: 100%;
+	width: calc((100% - 5em)/3 - 1.5px); /* (100% - x)/n - y; x = logo-width; n = number of items; y = border/padding etc. */
 	text-align: center;
-	line-height:5em; /* equal to item height */
+	line-height:5em; /* equal to menu height */
+	float: left;
 }
 
 .menu-dropdown{
 	position:relative;
 	display: none;
 	width: 100%;
-	margin-left: -1px;
-	transform: translate(10.1em, -5.05em);
+	margin-left: -1px
 }
 
 .menu-item:hover .menu-dropdown, .menu-dropdown:hover{
@@ -50,7 +49,6 @@ html{
 }
 
 body{
-	margin-left: 10.1em; /* equal to menu width */
 	margin-bottom: 6em; /* equal to footer height */
 }
 
