--- a/style1.css
+++ b/style1.css
@@ -1,100 +1,47 @@
-/* Geschreven door Auke Scheepstra */
+/* Written by Auke Scheepstra */
 
-/* MENU */
-/* small icon next to buttons */
+/* Navigation */
+/* Sidenav with large logo */
 
-#menu-container{
-	width: 100%;
-	height: 5em;
+body{
+	margin-left: 10.1em; /* equal to nav width */
 }
 
-#menu-logo{
-	width: calc(5em - 2px);
-	height: 5em;
-	float:left;
-}
-
-.menu-item{
-	list-style-type: none;
+#nav-container{
+	position: fixed;
+	width: 10em;
 	height: 100%;
-	width: calc((100% - 5em)/3 - 1.5px); /* (100% - x)/n - y; x = logo-width; n = number of items; y = border/padding etc. */
-	text-align: center;
-	line-height:5em; /* equal to menu height */
-	float: left;
+	transform: translate(-10.1em);
 }
 
-.menu-dropdown{
+#nav-logo{
+	width: 100%;
+	height: auto;
+}
+
+.nav-item{
+	list-style-type: none;
+	height: 5em;
+	width: 100%;
+	text-align: center;
+	line-height:5em; /* equal to item height */
+}
+
+.nav-dropdown{
 	position:relative;
 	display: none;
 	width: 100%;
-	margin-left: -1px
+	margin-left: -1px;
+	transform: translate(10.1em, -5.05em);
 }
 
-.menu-item:hover .menu-dropdown, .menu-dropdown:hover{
+.nav-item:hover .nav-dropdown, .nav-dropdown:hover{
 	display: block;
 	z-index: 1;
 }
 
-.menu-dropdown-item{
+.nav-dropdown-item{
 	width: 100%;
 	list-style-type: none;
 	z-index: 1;
-}
-
-/* FOOTER */
-
-html{
-	min-height: 100%;
-	position: relative;
-}
-
-body{
-	margin-bottom: 6em; /* equal to footer height */
-}
-
-#footer{
-	position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 6em;
-    width: 100%;
-    overflow:hidden; 
-}
-
-.footer-item{
-	width: calc(100%/3 - 1.7px);
-	height: 100%;
-	float: left;
-}
-
-.footer-item p{
-	padding: .5em;
-	line-height: 1.5em;
-}
-
-.footer-icon{
-	width: calc(100%/5 - 1em);
-	height: auto;
-	margin: .5em;
-	float: right;
-}
-
-/* Lipsum */
-
-#lipsum {
-	width: 100%;
-}
-
-#lipsum p{
-	padding: 1em;
-	background: #eee !important;
-	z-index: -1;
-}
-
-/* STYLES */
-/* Wireframe */
-
-#menu-logo, .menu-item, .menu-dropdown-item, .footer-item, #lipsum p{
-	background: #fff;
-	border: 1px solid #000;
 }
